# auditmodels

./: README.md  README_CRITERIOS_SCORE.md  app.py  credit_model_audit_report.html  credit_model_audit_report.md  credit_risk_modelling_audit_report.html  credit_risk_modelling_audit_report.md  documentation.md  main.py  pyproject.toml  regression_model_audit_report.html  regression_model_audit_report.md
examples/: audit_credit_risk_modelling.py  audit_regression_performance.py  demo_audit.py
notebooks/: resolution.ipynb
resolution/: audit_report.html  audit_report.md  credit_model_audit_report.html  credit_model_audit_report.md  credit_risk_modelling_audit_report.html  credit_risk_modelling_audit_report.md  regression_model_audit_report.md
scratch/: inspect_scores.py
src/auditmodels/: __init__.py  auditor.py  cli.py  compliance_audit.py  data_audit.py  documentation_audit.py  explainability_audit.py  fairness_audit.py  performance_audit.py  privacy_audit.py  production_audit.py  reporting.py  robustness_audit.py  security_audit.py  training_audit.py
tests/: test_audit.py
